// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`['apple','apple','apple','apple','apple'] 1`] = `
RNGSfc32 {
  "_rng": [Function],
  "_seed": Array [
    3467603136,
    171790564,
    2570879769,
    3571716107,
  ],
}
`;

exports[`['apple','apple','apple','apple','apple'] 2`] = `
Array [
  0.6789673378225416,
  0.25874294177629054,
  0.8167836032807827,
  0.6617898617405444,
  0.47150427498854697,
  0.8755843315739185,
  0.1887578519526869,
  0.8970381338149309,
  0.46180717274546623,
  0.6011948748491704,
  0.08018238912336528,
  0.2771920363884419,
  0.7973732207901776,
  0.028986769495531917,
  0.21976999030448496,
  0.920350780012086,
]
`;

exports[`[0, 2654435769, 1013904242, 3668340011] 1`] = `
RNGSfc32 {
  "_rng": [Function],
  "_seed": Array [
    0,
    2654435769,
    1013904242,
    3668340011,
  ],
}
`;

exports[`[0, 2654435769, 1013904242, 3668340011] 2`] = `
Array [
  0.4721359545364976,
  0.5977381586562842,
  0.10499598179012537,
  0.7162471688352525,
  0.7737048789858818,
  0.10252661304548383,
  0.5388140785507858,
  0.03130675223655999,
  0.28249518550001085,
  0.9021577208768576,
  0.7259290926158428,
  0.715998571831733,
  0.4378080458845943,
  0.681514490628615,
  0.9879769335966557,
  0.22878749459050596,
]
`;
